# all-project-2

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  config.example.js  config.js
sensor/: CMakeLists.txt
subscriber/: .env  .env.example  Cargo.toml  test_publisher.py
subscriber/src/: error.rs  main.rs
