[package]
name = "subscriber"
version = "0.1.0"
authors = ["Joe Burnard <burnardj@uni.coventry.ac.uk>"]

[dependencies]
rumqtt = "0.10.1"
log = "0.4.1"
env_logger = "0.5.3"
kankyo = "~0.2"
byteorder = "1"
time = "0.1.39"
futures = "0.1.18"
tokio-core = "0.1.12"
hyper = "0.11.19"
url = "1.7.0"
chrono = "0.4.0"
serde_json = "1.0.10"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled", "chrono"]